--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dist": "^0.1.2",
+    "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
     "moment": "^2.22.2",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-calendar": "^2.17.5",
     "react-dom": "^16.6.3",
+    "react-open-weather": "^0.4.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-validation": "^3.0.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "validator": "^10.11.0"
+    "socket.io-client": "^2.2.0",
+    "validator": "^10.11.0",
+    "weather-js": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,8 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
-  
+  "proxy": "http://192.168.11.65:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
