--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
+    "@wojtekmaj/react-datetimerange-picker": "^2.1.0",
     "axios": "^0.18.0",
     "dist": "^0.1.2",
     "font-awesome": "^4.7.0",
@@ -17,6 +18,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-calendar": "^2.17.5",
+    "react-datepicker": "^2.4.0",
     "react-dom": "^16.6.3",
     "react-open-weather": "^0.4.0",
     "react-redux": "^6.0.0",
