--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^2.17.5",
     "react-datepicker": "^2.4.0",
     "react-dom": "^16.6.3",
+    "react-images-upload": "^1.2.6",
     "react-open-weather": "^0.4.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
