--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.8.1",
-    "@fortawesome/free-regular-svg-icons": "^5.8.1",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-brands-svg-icons": "^5.8.2",
+    "@fortawesome/free-regular-svg-icons": "^5.8.2",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.3",
     "@wojtekmaj/react-datetimerange-picker": "^2.1.0",
@@ -14,15 +14,16 @@
     "dist": "^0.1.2",
     "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
-    "moment": "^2.22.2",
-    "node-sass": "^4.11.0",
-    "react": "^16.6.3",
-    "react-calendar": "^2.17.5",
-    "react-datepicker": "^2.4.0",
-    "react-dom": "^16.6.3",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "query-string": "^6.5.0",
+    "react": "^16.8.6",
+    "react-calendar": "^2.19.0",
+    "react-datepicker": "^2.5.0",
+    "react-dom": "^16.8.6",
     "react-images-upload": "^1.2.6",
     "react-open-weather": "^0.4.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-validation": "^3.0.7",
@@ -38,7 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://192.168.11.65:3001",
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
