--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.18.0",
     "dist": "^0.1.2",
     "font-awesome": "^4.7.0",
+    "formik": "^1.5.7",
+    "googleapis": "^39.2.0",
     "jquery-ui": "^1.12.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -31,7 +33,8 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.2.0",
     "validator": "^10.11.0",
-    "weather-js": "^2.0.0"
+    "weather-js": "^2.0.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "set PORT=80 && react-scripts start",
